// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons test suite android picture icon 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text />
</RNCSafeAreaProvider>
`;

exports[`Icons test suite android snow icon 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    dataSet={{}}
    selectable={false}
    style={
      [
        {
          "color": undefined,
          "fontSize": 12,
        },
        {
          "color": "#ec4899",
          "fontSize": 28,
          "height": 28,
          "lineHeight": 28,
          "width": 28,
        },
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
    testID="snow-icon"
  >
    
  </Text>
</RNCSafeAreaProvider>
`;

exports[`Icons test suite ios picture icon 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    dataSet={{}}
    selectable={false}
    style={
      [
        {
          "color": undefined,
          "fontSize": 12,
        },
        {
          "color": {
            "100": "#dcfce7",
            "200": "#bbf7d0",
            "300": "#86efac",
            "400": "#4ade80",
            "50": "#f0fdf4",
            "500": "#22c55e",
            "600": "#16a34a",
            "700": "#15803d",
            "800": "#166534",
            "900": "#14532d",
          },
          "fontSize": 28,
          "height": 28,
          "lineHeight": 28,
          "width": 28,
        },
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
    testID="picture-icon"
  >
    
  </Text>
</RNCSafeAreaProvider>
`;

exports[`Icons test suite ios snow icon 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    dataSet={{}}
    selectable={false}
    style={
      [
        {
          "color": undefined,
          "fontSize": 12,
        },
        {
          "color": "#ec4899",
          "fontSize": 28,
          "height": 28,
          "lineHeight": 28,
          "width": 28,
        },
        {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
    testID="snow-icon"
  >
    
  </Text>
</RNCSafeAreaProvider>
`;
